crates/core/tests/snapshots/container_finalize_test__container_finalize__unnamed_struct__supports_nested.snap
---
source: crates/core/tests/container_finalize_test.rs
expression: pretty(container.impl_partial_finalize())
---
fn finalize(
    self,
    context: &Self::Context,
) -> std::result::Result<Self, schematic::ConfigError> {
    let mut partial = Self::default();
    if let Some(layer) = Self::default_values(context)? {
        partial.merge(context, layer)?;
    }
    partial.merge(context, self)?;
    if let Some(layer) = Self::env_values()? {
        partial.merge(context, layer)?;
    }
    if let Some(layer) = partial.0 {
        partial.0 = Some(layer.finalize(context)?);
    }
    if let Some(layer) = partial.1 {
        partial.1 = Some(transform_config(layer.finalize(context)?, context)?);
    }
    if let Some(layer) = partial.2 {
        partial.2 = Some(layer.finalize(context)?);
    }
    if let Some(layer) = partial.3 {
        partial.3 = Some(transform_config(layer.finalize(context)?, context)?);
    }
    Ok(partial)
}
