crates/core/tests/snapshots/container_finalize_test__container_finalize__unnamed_struct__supports_nested_collections.snap
---
source: crates/core/tests/container_finalize_test.rs
expression: pretty(container.impl_partial_finalize())
---
fn finalize(
    self,
    context: &Self::Context,
) -> std::result::Result<Self, schematic::ConfigError> {
    let mut partial = Self::default();
    if let Some(layer) = Self::default_values(context)? {
        partial.merge(context, layer)?;
    }
    partial.merge(context, self)?;
    if let Some(layer) = Self::env_values()? {
        partial.merge(context, layer)?;
    }
    if let Some(layer) = partial.0 {
        partial.0 = Some({
            let mut list = Vec::default();
            for layer in layer {
                list.push(layer.finalize(context)?);
            }
            list
        });
    }
    if let Some(layer) = partial.1 {
        partial.1 = Some(
            transform_config(
                {
                    let mut map = HashMap::default();
                    for (key, layer) in layer {
                        map.insert(key, layer.finalize(context)?);
                    }
                    map
                },
                context,
            )?,
        );
    }
    if let Some(layer) = partial.2 {
        partial.2 = Some(
            transform_config(
                {
                    let mut set = BTreeSet::default();
                    for layer in layer {
                        set.insert(layer.finalize(context)?);
                    }
                    set
                },
                context,
            )?,
        );
    }
    Ok(partial)
}
